--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,11 @@ p {
 }
 
 /* Headings */
+.logo-icon {
+  height: 40px;
+  weight: 40px;
+  margin-right: 5px;
+}
 
 .big-heading {
   font-family: 'Montserrat', sans-serif;
